--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "npm run build && nodemon server.js"
+
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,15 @@
   },
   "homepage": "https://github.com/rafanime/backend_experiments#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^1.18.6"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.4",
-    "mongoose": "^5.3.9"
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.9",
+    "morgan": "^1.9.1"
   }
 }
