--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && nodemon server.js"
-
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.9",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "rimraf": "^2.6.2"
   }
 }
